reinstalled sveltekit skeleton

--- a/.svelte-kit/tsconfig.json
+++ b/.svelte-kit/tsconfig.json
@@ -1,14 +1,6 @@
 {
 	"compilerOptions": {
-		"baseUrl": "..",
-		"paths": {
-			"$lib": [
-				"src/lib"
-			],
-			"$lib/*": [
-				"src/lib/*"
-			]
-		},
+		"paths": {},
 		"rootDirs": [
 			"..",
 			"./types"
@@ -41,6 +33,9 @@
 	],
 	"exclude": [
 		"../node_modules/**",
-		"./[!ambient.d.ts]**"
+		"./[!ambient.d.ts]**",
+		"../src/service-worker.js",
+		"../src/service-worker.ts",
+		"../src/service-worker.d.ts"
 	]
 }
